@@ -10,6 +10,8 @@ smoof v1.5 (Release data: xxxx-xx-xx)
 * Fixed: ggplot2 warnings
 * Fixed: wrong lower bound in MOP3 test function
 * Fixed: issue in definition of Cosine Mixture Function due to faulty online sources
+* Fixed: issue with min<->max conversion if functions has.simple.signature = FALSE and
+  explicit return statement was used.
 
 smoof v1.4 (Release data: 2016-08-03)
 ============
